# cython-demo-2023

./: README.md  pyproject.toml  setup.py
src/cythonmode/: life.pyx
src/purepythonmode/: __init__.py  life.py
